<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SneakerHead</string>

    <string name="splashScreen">E-commerce Shop</string>
    <string name="developer">&#169; Developed by Assawin Chittanandha</string>
    <string name="developerID">1805180001</string>

    <string name="welcome">Welcome to Mello Shop</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="noAccount">Do not have an account? <u>Register</u></string>


    <string name="createAccount">Create An Account</string>
    <string name="fistName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="Email">E-mail</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="agree">I Agree To The Terms &amp; Condition</string>
    <string name="register">Register</string>
    <string name="accountOwn">Already have an account? <u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_passowrd_and_confirm_password_mismatch">Password abd confirm password do not match.</string>
    <string name="err_msg_agree_terms_and_conditions">Please agree terms and conditions.</string>
    <string name="registry_successful">Register Successfully</string>

    <string name="please_wait">Please wait &#8230;</string>

    <string name="paragraphforgetPassword">Enter your e-mail address, we will send you a email to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="email_sent_success">Email sent successfully to reset your password!</string>

    <string name="profile">Profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>

    <string name="read_storage_permission_denied">You just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection failed.</string>

    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>

    <string name="msg_profile_update_success">Your profile has updated successfully.</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>

    <string name="action_settings">SETTINGS</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_address">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="title_complete_profile">Complete Profile</string>
    <string name="title_edit_profile">Edit Profile</string>

    <string name="action_add_product">Add Products</string>
    <string name="title_and_product">ADD PRODUCT</string>
    <string name="ed_hint_product_title">Product Title</string>
    <string name="ed_hint_product_price">Product Price ($)</string>
    <string name="ed_hint_product_description">Product Description</string>
    <string name="ed_hint_product_quantity">Product Quantity</string>

    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_product_quantity">Please enter product quantity.</string>

    <string name="product_uploaded_success">Your product was uploaded successfully.</string>

    <string name="no_products_added_yet">No product added yet!</string>

    <string name="no_dashboard_item_found">No items found!</string>

    <string name="product_delete_success_message">Your product was deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity:</string>

    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">Product was added to the cart.</string>

    <string name="btn_lbl_go_to_cart">Go TO CART</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal:</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>

    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_office">Office</string>
    <string name="lbl_other">Other</string>
    <string name="hint_additional_note">Additional Note(Optional)</string>
    <string name="hint_other_details">Other</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="err_your_address_added_successfully">Your address was added successfully.</string>

    // edit or update address
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address was updated successfully.</string>

    // delete address
    <string name="err_your_address_deleted_successfully">Your address was deleted successfully.</string>
    <string name="title_select_address">SELECT ADDRESS</string>

    //checkout
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>

    // order
    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    //sold product
    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold yet!</string>

    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>

</resources>