<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="33sp"
            android:text = "@string/app_name"
            android:textColor="@color/white"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_loginPage"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:inputType="text"
            android:hint="@string/Email"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_marginTop="250dp"
            android:hint="@string/password"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="right"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="80dp"
            android:text="@string/forgetPassword"
            android:textSize="10sp"
            android:textColor="@color/red"/>

        <Button
            android:id="@+id/login_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="450dp"
            android:textStyle="italic"
            android:text="@string/noAccount" />


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>