<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgotPassowordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_loginPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722">

        <TextView
            android:id="@+id/tv_forgetPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/forgetPassword"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_paragraphText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/paragraphforgetPassword"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/ed_forgetEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:hint="@string/Email"
            android:inputType="text"
            android:textSize="15sp" />

        <Button
            android:id="@+id/submit_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/black"
            android:text="@string/submit"
            android:textColor="@color/white" />


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>