<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddEditAddressActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_add_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_address"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_user_profile_activity"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_address_fullName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="510dp"
                android:hint="@string/hint_full_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.033" />

            <EditText
                android:id="@+id/ed_address_phoneNumber"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_phone_number"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_address_fullName" />

            <EditText
                android:id="@+id/ed_address_address"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_address_phoneNumber" />

            <EditText
                android:id="@+id/ed_address_zipCode"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_zip_code"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_address_address" />
            <EditText
                android:id="@+id/ed_address_additionalNote"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_additional_note"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_address_zipCode" />

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_address_additionalNote">

                <RadioButton
                    android:id="@+id/rb_home"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10sp"
                    android:layout_weight="3"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/lbl_home"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_office"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10sp"
                    android:layout_weight="3"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/lbl_office"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10sp"
                    android:layout_weight="3"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/lbl_other"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <EditText
                android:id="@+id/ed_address_noteForOther"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_other_details"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_type"
                />

            <Button
                android:id="@+id/addressAddSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_address_noteForOther" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>